--- a/Quantum Analyzer/Controllers/BeginCheck/QABeginCheckViewController.xib
+++ b/Quantum Analyzer/Controllers/BeginCheck/QABeginCheckViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -45,9 +45,7 @@
                         <constraint firstAttribute="height" constant="34" id="lon-vd-udu"/>
                     </constraints>
                     <state key="normal" title="开始检测"/>
-                    <state key="selected" title="开始检测">
-                        <color key="titleColor" red="1" green="0.99607843137254903" blue="0.011764705882352941" alpha="1" colorSpace="calibratedRGB"/>
-                    </state>
+                    <state key="selected" title="开始检测"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                             <integer key="value" value="17"/>
@@ -61,9 +59,6 @@
                     <rect key="frame" x="138.5" y="593" width="98" height="34"/>
                     <color key="backgroundColor" red="0.30018374320000002" green="0.87274843449999995" blue="0.99653691050000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <state key="normal" title="停止检测"/>
-                    <state key="selected">
-                        <color key="titleColor" red="1" green="0.99607843139999996" blue="0.01176470588" alpha="1" colorSpace="calibratedRGB"/>
-                    </state>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                             <integer key="value" value="17"/>
@@ -78,9 +73,7 @@
                     <color key="backgroundColor" red="0.72549019609999998" green="0.72549019609999998" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <state key="normal" title="查看报告"/>
                     <state key="disabled" title="查看报告"/>
-                    <state key="selected" title="保存结果">
-                        <color key="titleColor" red="1" green="0.99607843139999996" blue="0.01176470588" alpha="1" colorSpace="calibratedRGB"/>
-                    </state>
+                    <state key="selected" title="保存结果"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                             <integer key="value" value="17"/>
@@ -120,7 +113,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jhn-UI-kh9">
                             <rect key="frame" x="10" y="10" width="100" height="80"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="6.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="9kT-KX-dHT">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="9kT-KX-dHT">
                                     <rect key="frame" x="0.0" y="0.0" width="50" height="80"/>
                                 </imageView>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="y2T-e2-M0Q">
@@ -226,7 +219,6 @@
     </objects>
     <resources>
         <image name="0.jpg" width="16" height="16"/>
-        <image name="6.jpg" width="16" height="16"/>
         <image name="scan_net" width="16" height="16"/>
     </resources>
 </document>
