--- a/Quantum Analyzer/Controllers/Home/QAHomeViewController.xib
+++ b/Quantum Analyzer/Controllers/Home/QAHomeViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -25,24 +25,24 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gec-Sb-wKY">
-                            <rect key="frame" x="37.5" y="20" width="300" height="80"/>
+                            <rect key="frame" x="37.5" y="20" width="300" height="0.0"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="300" id="9Vw-PT-VYW"/>
-                                <constraint firstAttribute="height" constant="80" id="Kmf-bs-paN"/>
+                                <constraint firstAttribute="height" id="Kmf-bs-paN"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="28"/>
                             <color key="textColor" red="0.62745098040000002" green="0.62745098040000002" blue="0.62745098040000002" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="分析仪" translatesAutoresizingMaskIntoConstraints="NO" id="4Wf-oN-Jdx">
-                            <rect key="frame" x="118" y="110" width="139" height="225"/>
+                            <rect key="frame" x="66.5" y="30" width="242" height="252"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="139" id="FfD-rl-ePX"/>
-                                <constraint firstAttribute="height" constant="225" id="cPZ-9c-HvV"/>
+                                <constraint firstAttribute="width" constant="242" id="FfD-rl-ePX"/>
+                                <constraint firstAttribute="height" constant="252" id="cPZ-9c-HvV"/>
                             </constraints>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a8t-V0-jcM">
-                            <rect key="frame" x="118" y="355" width="139" height="34"/>
+                            <rect key="frame" x="118" y="322" width="139" height="34"/>
                             <color key="backgroundColor" red="0.30018374320000002" green="0.87274843449999995" blue="0.99653691050000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="139" id="qIw-kx-mZi"/>
@@ -60,7 +60,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qrx-jh-Te4">
-                            <rect key="frame" x="118" y="399" width="139" height="34"/>
+                            <rect key="frame" x="118" y="366" width="139" height="34"/>
                             <color key="backgroundColor" red="0.30018374320000002" green="0.87274843449999995" blue="0.99653691050000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="139" id="qfP-CY-CY2"/>
@@ -78,7 +78,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QFM-7A-mUc">
-                            <rect key="frame" x="118" y="443" width="139" height="34"/>
+                            <rect key="frame" x="118" y="410" width="139" height="34"/>
                             <color key="backgroundColor" red="0.30018374320000002" green="0.87274843449999995" blue="0.99653691050000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="34" id="8Gg-gE-Hqb"/>
@@ -96,7 +96,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I7V-lL-lDM">
-                            <rect key="frame" x="118" y="487" width="139" height="34"/>
+                            <rect key="frame" x="118" y="454" width="139" height="34"/>
                             <color key="backgroundColor" red="0.30018374320000002" green="0.87274843449999995" blue="0.99653691050000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="139" id="Bqb-Sb-v3q"/>
@@ -116,7 +116,7 @@
                     </subviews>
                     <color key="backgroundColor" red="0.94509803921568625" green="0.94509803921568625" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstItem="a8t-V0-jcM" firstAttribute="top" secondItem="4Wf-oN-Jdx" secondAttribute="bottom" constant="20" id="8Vw-Jb-oYL"/>
+                        <constraint firstItem="a8t-V0-jcM" firstAttribute="top" secondItem="4Wf-oN-Jdx" secondAttribute="bottom" constant="40" id="8Vw-Jb-oYL"/>
                         <constraint firstItem="I7V-lL-lDM" firstAttribute="top" secondItem="QFM-7A-mUc" secondAttribute="bottom" constant="10" id="Cvk-fh-rCg"/>
                         <constraint firstItem="gec-Sb-wKY" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Pl4-OJ-ieS"/>
                         <constraint firstItem="qrx-jh-Te4" firstAttribute="top" secondItem="a8t-V0-jcM" secondAttribute="bottom" constant="10" id="PnU-Pi-HDO"/>
@@ -142,6 +142,6 @@
         </view>
     </objects>
     <resources>
-        <image name="分析仪" width="138" height="225"/>
+        <image name="分析仪" width="241" height="251"/>
     </resources>
 </document>
